# xy-ising-simulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
include/: constants.h  input.h  rendering.h  simulation.h
output/: main
src/: input.cpp  input.d  main.cpp  main.d  rendering.cpp  rendering.d  simulation.cpp  simulation.d
